<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <CheckBox
        android:id="@+id/emotions_filter_item__cb_emotion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        tools:text="@string/anxiety" />

    <LinearLayout
        android:id="@+id/emotions_filter_item__intensity_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/emotions_filter_item__tv_intensity_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intensity_from"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emotions_filter_item__et_intensity_from"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/black_outline_rounded"
            android:inputType="number"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/emotions_filter_item__tv_intensity_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/to"
            android:textColor="@color/black"

            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emotions_filter_item__et_intensity_to"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/black_outline_rounded"
            android:inputType="number"
            android:textAlignment="center" />

    </LinearLayout>

</LinearLayout>