<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="android.view.View"/>
        <variable name="AddEmotionViewModel" type="com.fls.self_care_assistant.viewModels.AddEmotionViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frg_add_emotion__layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.main_frg.AddEmotionFragment">

        <TextView
            android:id="@+id/frg_add_emotion__tv_choose_emotion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="26dp"
            android:text="@string/choose_emotion"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/frg_add_emotion__sp_emotion"
            style="@style/spinner_style"
            android:layout_width="0dp"
            android:layout_height="43dp"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:entries="@array/emotions"
            android:background="@drawable/rounded_spinner"
            android:popupBackground="@drawable/rounded_shape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frg_add_emotion__tv_choose_emotion" />

        <TextView
            android:id="@+id/frg_add_emotion__tv_choose_intensity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="44dp"
            android:text="@string/choose_intensity"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/frg_add_emotion__sp_emotion" />

        <SeekBar
            android:id="@+id/frg_add_emotion__sb_emotion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="16dp"
            android:max="9"
            android:progressDrawable="@drawable/seekbar_progress_bg"
            android:thumb="@drawable/seekbar_thumb"
            android:splitTrack="false"
            android:thumbOffset="0dp"
            android:onProgressChanged="@{AddEmotionViewModel.seekBarTracking}"
            android:progress="@{AddEmotionViewModel.emotionStrength}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frg_add_emotion__tv_choose_intensity" />

        <TextView
            android:id="@+id/tv_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="20dp"
            android:text="@string/_1"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frg_add_emotion__sb_emotion" />

        <TextView
            android:id="@+id/tv_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="48dp"
            android:text="@string/_10"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frg_add_emotion__sb_emotion" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/frg_add_emotion__mb_add_emotion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="88dp"
            android:layout_marginHorizontal="65dp"
            style="@style/button_style"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frg_add_emotion__sb_emotion" />

        <ProgressBar
            android:id="@+id/frg_add_emotion__progress_bar"
            style="?android:attr/progressBarStyle"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
