<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".fragments.main_frg.FilterFragment">

    <TextView
        android:id="@+id/frg_filter__tv_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/filter"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:textSize="36sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/frg_filter__scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="10dp"
        android:isScrollContainer="true"
        android:overScrollMode="never"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frg_filter__tv_filter">

        <LinearLayout
            android:id="@+id/frg_filter__layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/frg_filter__tv_emotions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/emotions"
                android:textColor="@color/black"
                android:textSize="32sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frg_filter__tv_filter" />

            <CheckBox
                android:id="@+id/frg_filter__cb_anxiety"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/anxiety"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frg_filter__tv_emotions" />

            <LinearLayout
                android:id="@+id/frg_filter__anxiety_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frg_filter__cb_anxiety">

                <TextView
                    android:id="@+id/frg_filter__tv_anxiety_intensity_from"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/intensity_from"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/frg_filter__et_anxiety_intensity_from"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/black_outline_rounded"
                    android:inputType="number"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/frg_filter__tv_anxiety_intensity_to"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/to"
                    android:textColor="@color/black"

                    android:textSize="20sp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/frg_filter__et_anxiety_intensity_to"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/black_outline_rounded"
                    android:inputType="number"
                    android:textAlignment="center" />

            </LinearLayout>

            <CheckBox
                android:id="@+id/frg_filter__cb_apathy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/apathy"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frg_filter__anxiety_layout" />

            <LinearLayout
                android:id="@+id/frg_filter__apathy_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frg_filter__cb_apathy">

                <TextView
                    android:id="@+id/frg_filter__tv_apathy_intensity_from"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/intensity_from"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/frg_filter__et_apathy_intensity_from"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/black_outline_rounded"
                    android:inputType="number"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/frg_filter__tv_apathy_intensity_to"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/to"
                    android:textColor="@color/black"

                    android:textSize="20sp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/frg_filter__et_apathy_intensity_to"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/black_outline_rounded"
                    android:inputType="number"
                    android:textAlignment="center" />

            </LinearLayout>

            <CheckBox
                android:id="@+id/frg_filter__cb_anger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/anger"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frg_filter__apathy_layout" />

            <LinearLayout
                android:id="@+id/frg_filter__anger_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frg_filter__cb_anger">

                <TextView
                    android:id="@+id/frg_filter__tv_anger_intensity_from"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/intensity_from"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/frg_filter__et_anger_intensity_from"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/black_outline_rounded"
                    android:inputType="number"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/frg_filter__tv_anger_intensity_to"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/to"
                    android:textColor="@color/black"

                    android:textSize="20sp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/frg_filter__et_anger_intensity_to"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/black_outline_rounded"
                    android:inputType="number"
                    android:textAlignment="center" />

            </LinearLayout>

            <TextView
                android:id="@+id/frg_filter__tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:text="Date"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/frg_filter__anger_layout" />

            <RadioGroup
                android:id="@+id/frg_filter__rg_date_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frg_filter__tv_date">

                <RadioButton
                    android:id="@+id/frg_filter__rb_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/frg_filter__rb_last_week"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_week"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/frg_filter__rb_last_month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_month"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/frg_filter__rb_custom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/custom"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </RadioGroup>

            <LinearLayout
                android:id="@+id/frg_filter__custom_date_from_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/frg_filter__tv_custom_date_from"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/from"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/frg_filter__et_custom_date_from"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:paddingStart="10dp"
                    android:background="@drawable/black_outline_rounded"
                    android:inputType="date" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/frg_filter__custom_date_to_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="105dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/frg_filter__tv_custom_date_to"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/to"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/frg_filter__et_custom_date_to"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:paddingStart="10dp"
                    android:background="@drawable/black_outline_rounded"
                    android:inputType="date" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/frg_filter__button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/frg_filter__mb_cancel"
            style="@style/button_style"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/cancel"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/frg_filter__mb_clear_all"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/frg_filter__mb_clear_all"
            style="@style/button_style"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/clear_all"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/frg_filter__mb_apply"
            app:layout_constraintStart_toEndOf="@id/frg_filter__mb_cancel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/frg_filter__mb_apply"
            style="@style/button_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/apply"
            android:layout_weight="1"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/frg_filter__mb_clear_all" />
    </LinearLayout>


</LinearLayout>