<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/frg_history__sw_display_switch"
        style="@style/Widget.App.Switch"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="28dp"
        android:text="@string/list"
        android:thumb="@drawable/switch_thumb"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:thumbTint="@color/black"
        app:track="@drawable/switch_track"
        app:trackTint="@color/switch_color" />


    <TextView
        android:id="@+id/frg_history__tv_chart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="38dp"
        android:text="@string/chart"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/frg_history__sw_display_switch"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/frg_history_recyclerLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="18dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:background="@drawable/black_outline_10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frg_history__sw_display_switch"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/black_outline_10dp_semi_rounded"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/emotion_header__tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginVertical="10dp"
                android:layout_weight="1"
                android:text="@string/date"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/emotion_header__tv_emotion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/emotion"
                android:layout_marginVertical="10dp"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/emotion_header__tv_intensity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="Интенсивность"
                android:layout_marginVertical="10dp"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/frg_history__rv_emotions"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
    </LinearLayout>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/frg_history__mb_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        app:backgroundTint="@null"
        android:background="@drawable/button_background_semi_rounded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/frg_history__progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>